--- a/GJ1P/package.json
+++ b/GJ1P/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/node": "^20.8.5",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -19,9 +20,18 @@
 		"postcss": "^8.4.30",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"prisma": "^5.4.2",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.4.2"
+	}
 }
