--- a/GJ1P/package.json
+++ b/GJ1P/package.json
@@ -33,6 +33,8 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.4.2",
+		"bcrypt": "^5.1.1",
+		"jsonwebtoken": "^9.0.2",
 		"tsx": "^3.13.0"
 	}
 }
